deploy.yaml
---
# Source: bb-web/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bb-web
  labels:
    helm.sh/chart: bb-web-0.1.0
    app.kubernetes.io/name: bb-web
    app.kubernetes.io/instance: bb-web
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: bb-web
    app.kubernetes.io/instance: bb-web
---
# Source: bb-web/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bb-web
  labels:
    helm.sh/chart: bb-web-0.1.0
    app.kubernetes.io/name: bb-web
    app.kubernetes.io/instance: bb-web
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bb-web
      app.kubernetes.io/instance: bb-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bb-web
        app.kubernetes.io/instance: bb-web
    spec:
      serviceAccountName: bb-web
      securityContext:
        {}
      containers:
        - name: bb-web
          securityContext:
            {}
          image: "docker.io/johnkola/bazarbozorg-web-adds:dev-lts"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /profile
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /profile
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 30
          resources:
            {}
---
# Source: bb-web/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: bb-web
  labels:
    helm.sh/chart: bb-web-0.1.0
    app.kubernetes.io/name: bb-web
    app.kubernetes.io/instance: bb-web
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: "eastrug.com"
      http:
        paths:
          - path: 
            backend:
              serviceName: bb-web
              servicePort: 80
